# uk-weather-mcp-via-skill

./: .env.example  .envrc  .gitignore  .mcp.json  CLAUDE.md  GITHUB_ACTIONS_SUMMARY.md  README.md  pyproject.toml  test_examples.md  uk_weather_mcp.py
.github/: SETUP.md
.github/workflows/: inspect.yml  test-mcp.yml
